--- a/templates/profile.html
+++ b/templates/profile.html
@@ -128,7 +128,7 @@
                         <div class="row justify-content-center">
                             <div class="col-6">
                                 <small class="text-muted d-flex align-items-center justify-content-center">
-                                    <i class="bi bi-person me-2"></i> Member
+                                    <i class="bi bi-person me-2"></i> Member of Software Insight
                                 </small>
                             </div>
                             <div class="col-6">
