--- a/templates/header.html
+++ b/templates/header.html
@@ -22,7 +22,7 @@
     <!-- Bootstrap CSS -->
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet"/>
 
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
 </head>
 <body>
 
