--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,8 +14,7 @@
     </div>
   </div>
 </header>
-
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
+<!-- Profile Card -->
 
 <div class="container py-5 d-flex justify-content-center align-items-center min-vh-100">
   <div class="col-md-10 col-lg-8">
