style(templates): adjust layout and text styling in multiple templates
- Change column width from xl-7 to xl-8 in make-post, login, and register templates
- Update logout icon color to match text
- Modify heading levels and text in index.html for better hierarchy

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,9 @@
             <div class="col-md-10 col-lg-8 col-xl-7 text-center">
                 <div class="site-heading">
                     {% if current_user.first_name %}
-                    <h1>{{ current_user.first_name }}'s Blog</h1>
+                    <h2>Welcome to {{ current_user.first_name }}'s Insights</h2>
                     {% else %}
-                    <h1>Blog Theme</h1>
+                    <h2>The Software Insight Blog</h2>
                     {% endif %}
                     <span class="subheading">A Blog Theme by The Software Insight</span>
                 </div>
