--- a/templates/header.html
+++ b/templates/header.html
@@ -97,7 +97,7 @@
                         </li>
                         <li>
                             <a class="dropdown-item text-danger" href="{{ url_for('logout') }}">
-                                <i class="bi bi-box-arrow-right me-2"></i>Logout
+                                <i class="bi bi-box-arrow-right me-2 text-danger"></i>Logout
                             </a>
                         </li>
                     </ul>
