--- a/templates/header.html
+++ b/templates/header.html
@@ -91,7 +91,15 @@
                                 <i class="bi bi-plus-circle me-2"></i>Create New Post
                             </a>
                         </li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
 
+                        <li>
+                            <a class="dropdown-item" href="{{ url_for('change_password') }}">
+                                <i class="bi bi-lock me-2"></i>Change Password
+                            </a>
+                        </li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
